--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
 
         <activity android:name="com.aliyun.vodplayerview.activity.LoginActivity"
                   android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
+
+        <activity android:name="com.aliyun.vodplayerview.activity.WelcomeActivity"
+                  android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
