1.修改录屏方式为ScreenRecorder，而不是以前的ScreenRecordService。由此而修改AliyunPlayerSkinActivity 2.文件名保存的时间使用冒号间隔 3.修改setting_layout 的ScrollView使其不能遮挡下面的按钮

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,9 +63,9 @@
                   android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                   android:label="修改密码">
         </activity>
-        <service
-            android:name="com.aliyun.vodplayerview.Util.ScreenRecordService">
-        </service>
+        <!--<service-->
+            <!--android:name="com.aliyun.vodplayerview.Util.ScreenRecordService">-->
+        <!--</service>-->
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.bi.fileprovider"
