添加了app更新功能 并考虑到app应该是进入主界面后自动检索更新，若不需更新或用户选择了忽略则不弹出任何界面。否则弹出更新窗口。主要使用Xupdate框架。 另外，在左侧边栏添加检查更新按钮，无论当前版本是否为最新版本，都需要toast提示用户以增加用户操作性。主要实现逻辑是在MyApp类添加boolean值以判断是否弹出toast，并在主界面、按钮分别设置该boolean值。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.bi"
         minSdkVersion 22
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -60,4 +60,8 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.12.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.github.xuexiangjys:XUpdate:1.0.7'
+    implementation 'com.qianwen:okhttp-utils:3.8.0'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.5'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-sub:1.1.5'
 }
